network doesn't need to kill nm-applet